--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -1,10 +1,8 @@
 body > nav {
+  margin-bottom: 0.75em !important;
+  @include border-radius(0.1em);
   position: relative;
   background-color: $nav-bg;
-  @include background($nav-bg-back);
-  border: {
-    top: 1px solid $nav-border-top;
-    bottom: 1px solid $nav-border-bottom; }
   padding-top: .15em;
   padding-bottom: .15em;
   padding-right: 0.9em !important;
