Removes extra border radius and centers header

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,8 +1,10 @@
 <hgroup>
-  <div id="logo">
-    <img src="/images/flight-logo.png" />
-  	<div class="clear"></div>
+  <div class="content">
+    <div id="logo">
+      <img src="/images/flight-logo.png" />
+      <div class="clear"></div>
+    </div>
+    <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+    <div class="clear"></div>
   </div>
-  <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
-  <div class="clear"></div>
 </hgroup>
