--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,8 +1,10 @@
 body > header {
-  margin: 0 auto;
-  width: 50%;
-  min-width: 500px;
-  padding-left:0;
+  padding: 25px 0;
+  .content {
+    margin: 0 auto;
+    margin-left: -194px;
+    padding-left: 50%;
+  }
   h1 {
     display: inline-block;
     margin: 0;
