Changes to white themee

--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -10,7 +10,7 @@ body > header {
     margin: 0;
     font-size: 3.7em;
     padding-left: 0.1em;
-    text-shadow: rgba(0, 0, 0, 0.8) 0 0 8px;
+    /*text-shadow: rgba(0, 0, 0, 0.8) 0 0 8px;*/
     float: left;
     a, a:visited, a:hover {
       color: $title_color;
