--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -10,7 +10,7 @@ $link-color-active: adjust-color($link-color-hover, $lightness: -15) !default;
 $main-bg: #f2f2f2 !default;
 $page-bg: #262C33 !default;
 $article-border: #eeeeee !default;
-$content-bg: #F8F8F8;
+$content-bg: #F8F8F8 !default;
 
 $header-bg: #333 !default;
 $header-border: lighten($header-bg, 15) !default;
@@ -61,6 +61,7 @@ $page-border-bottom: darken($footer-bg, 5) !default;
 
 a {
   @include link-colors($link-color, $hover: $link-color-hover, $focus: $link-color-hover, $visited: $link-color-visited, $active: $link-color-active);
+  text-decoration: none;
 }
 aside.sidebar a {
   @include link-colors($sidebar-link-color, $hover: $sidebar-link-color-hover, $focus: $sidebar-link-color-hover, $active: $sidebar-link-color-active);
@@ -70,7 +71,7 @@ a {
 }
 
 html {
-  background: $page-bg image-url('line-tile.png') top left;
+  background: $page-bg;
 }
 body {
   #main{
