--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -2,6 +2,12 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works.
 // If you need a handy color picker try http://hslpicker.com
 
+$page-bg: #fafafa;
+$title_color: #555;
+$main-bg: #fff;
+$content-bg: #fff;
+$sidebar-bg: #fff;
+$link-color: #139ae9;
 //$header-bg: #263347;
 //$subtitle-color: lighten($header-bg, 58);
 //$nav-bg: desaturate(lighten(#8fc17a, 18), 5);
