More tweaks for design

--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -20,5 +20,12 @@
 //$sidebar-pad-wide: 20px;
 //$sidebar-width-wide: 300px;
 
-$article-max-width: 100%;
+$max-width: 100%;
+
+$article-max-width: 40%;
 $indented-lists: true;
+
+$sidebar-toggle-display: none;
+$sidebar-border-override: none;
+
+$footer-margin-bottom: 0;
