--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -136,6 +136,7 @@ body.sidebar-footer {
   #main {
     padding: 0;
     margin: 0 auto;
+    border-bottom: none;
   }
   #content {
     overflow: visible;
