--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -3,11 +3,18 @@
 // If you need a handy color picker try http://hslpicker.com
 
 $page-bg: #fafafa;
-$title_color: #555;
 $main-bg: #fff;
 $content-bg: #fff;
 $sidebar-bg: #fff;
+
+$title_color: #555;
 $link-color: #139ae9;
+
+$footer-bg: #f2f2f2;
+$footer-color: #999;
+$footer-link-color: #666;
+
+
 //$header-bg: #263347;
 //$subtitle-color: lighten($header-bg, 58);
 //$nav-bg: desaturate(lighten(#8fc17a, 18), 5);
