--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -4,15 +4,13 @@ body > footer {
   color: $footer-color;
   text-shadow: lighten($footer-bg, 5) 0 1px;
   background-color: $footer-bg;
-  @include background($footer-bg-back);
-  border-top: 1px solid $footer-border-top;
   position: relative;
   padding-top: 1em;
   padding-bottom: 1em;
-  -moz-border-radius:  0 0 0.4em 0.4em;
-  -webkit-border-radius: 0 0 0.4em 0.4em;
-  border-radius:0 0 0.4em 0.4em;
-  margin-bottom: 3em;
+  /*-moz-border-radius:  0 0 0.4em 0.4em;*/
+  /*-webkit-border-radius: 0 0 0.4em 0.4em;*/
+  /*border-radius:0 0 0.4em 0.4em;*/
+  margin-bottom: $footer-margin-bottom;
 
   z-index: 1;
   a {
