--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -8,3 +8,7 @@
     <div class="clear"></div>
   </div>
 </hgroup>
+
+<ul class="social-menu top-right-corner">
+  <li class="social-menu-item"><a href="http://twitter.com/rogeliog"><img src="/images/twitter-logo.png" /></a></li>
+</ul>
